<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.menu.MainMenuFragment">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:background="#48000000"
       android:layout_height="match_parent">
       <FrameLayout
           android:layout_width="1dp"
           android:layout_height="match_parent"
           android:background="#23000000"
           android:layout_gravity="right"
           app:layout_constraintLeft_toRightOf="@id/app_main_menu"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintBottom_toBottomOf="parent">

       </FrameLayout>
       <FrameLayout
           android:id="@+id/app_main_menu"
           android:layout_width="290dp"
           android:layout_height="match_parent"
           android:background="#FFFFFF"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintBottom_toBottomOf="parent">




           <FrameLayout
               android:layout_width="match_parent"
               android:background="@color/colorPrimaryDark"
               android:layout_height="200dp">
               <ImageView
                   android:id="@+id/main_menu_user_type_image_view"
                   android:layout_width="100dp"
                   android:layout_height="100dp"
                   android:src="@drawable/ic_car_black"
                   android:layout_gravity="center"/>

               <TextView
                   android:id="@+id/main_menu_user_type_identifier_text_view"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="TG 9999"
                   android:textSize="25sp"
                   android:textColor="#FFF"
                   android:layout_gravity="bottom|center"
                   android:layout_marginBottom="10dp"/>
           </FrameLayout>


           <FrameLayout
               android:layout_width="wrap_content"
               android:layout_gravity="center"
               android:layout_height="wrap_content">

               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:gravity="center_horizontal"
                   android:orientation="vertical">

                   <LinearLayout
                       android:id="@+id/main_menu_position_set_linear_layout"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="vertical">

                       <ImageButton
                           android:id="@+id/main_menu_position_update_imageButton"
                           android:layout_width="70dp"
                           android:layout_height="70dp"
                           android:background="@drawable/default_button_rounded_black"
                           android:src="@drawable/ic_place_black_24dp"/>
                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_marginTop="10dp"
                           android:layout_gravity="center_horizontal"
                           android:text="statut"/>
                   </LinearLayout>

                   <LinearLayout
                       android:id="@+id/main_menu_state_set_linear_layout"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="vertical">

                       <ImageButton
                           android:id="@+id/main_menu_status_update_imageButton"
                           android:layout_width="70dp"
                           android:layout_height="70dp"
                           android:layout_marginTop="30dp"
                           android:background="@drawable/default_button_rounded_black"
                           android:src="@drawable/ic_phonelink_setup_black_24dp"/>
                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_marginTop="10dp"
                           android:layout_gravity="center_horizontal"
                           android:text="@string/settings_french"/>
                   </LinearLayout>

                   <LinearLayout
                       android:id="@+id/main_menu_search_set_linear_layout"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="vertical"
                       android:visibility="gone">

                       <ImageButton
                           android:id="@+id/main_menu_search_image_button"
                           android:layout_width="70dp"
                           android:layout_height="70dp"
                           android:layout_marginTop="30dp"
                           android:background="@drawable/default_button_rounded_black"
                           android:src="@drawable/ic_search_black_24dp"/>

                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_marginTop="10dp"
                           android:text="@string/search"/>
                   </LinearLayout>


               </LinearLayout>
           </FrameLayout>

           <FrameLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="bottom|center_horizontal">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/app_name"
                   android:layout_gravity="center_horizontal"
                   android:layout_marginBottom="20dp"/>
           </FrameLayout>

       </FrameLayout>


   </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>