<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <FrameLayout
        android:id="@+id/settings_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent">
        <ImageView
            android:id="@+id/settings_go_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_chevron_prev_black"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher_round"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/settings_app_bar"
        app:layout_constraintLeft_toLeftOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/settings"
                android:paddingLeft="17dp"
                android:paddingRight="10dp"
                android:textColor="#000"
                android:textSize="25sp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/settings_auto_position_constraint_layout"
                android:background="@drawable/settings_item_background"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="17dp"
                android:paddingRight="17dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginTop="50dp">
                <ImageView
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="center"
                    android:background="@drawable/default_button_rounded_black"
                    android:src="@drawable/ic_place_black_24dp"/>
                <TextView
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="70dp"
                    android:text="@string/automatic_position"/>

                <TextView
                    android:id="@+id/settings_auto_position_value_text_view"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:text="On"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/settings_current_phone_constraint_layout"
                android:background="@drawable/settings_item_background"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="17dp"
                android:paddingRight="17dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginTop="40dp">
                <ImageView
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="center"
                    android:background="@drawable/default_button_rounded_black"
                    android:src="@drawable/ic_phone_black_24dp"/>
                <TextView
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="70dp"
                    android:text="@string/change_number"/>

                <TextView
                    android:id="@+id/settings_current_phone_number_value_text_view"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:text="96735958"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>